Atualizando documentos - Vitimas Ocorrencia

--- a/App/Views/site/ocorrencia-vitima-enviar-arquivo-cadastrar-atualizar.html
+++ b/App/Views/site/ocorrencia-vitima-enviar-arquivo-cadastrar-atualizar.html
@@ -1,11 +1,11 @@
-<?php if(!class_exists('Rain\Tpl')){exit;}?><!-- Content Wrapper. Contains page content -->
+<!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
   <!-- Content Header (Page header) -->
   <section class="content-header">
-    <h1>Detalhe da Ocorrência - Enviar Arquivos</h1>
+    <h1>Detalhe da Ocorrência - Atualizar Arquivos</h1>
     <ol class="breadcrumb">
       <li><a href="/"><i class="fa fa-dashboard"></i> Inicio</a></li>
-      <li class="active">Detalhe da Ocorrência - Enviar Arquivos</li>
+      <li class="active">Detalhe da Ocorrência - Atualizar Arquivos</li>
     </ol>
   </section>
 
@@ -26,25 +26,22 @@
 
         <div class="row">
           <div class="col-md-12">
-            <?php if( $error != '' ){ ?>
+            {if="$error != ''"}
             <div class="alert alert-danger">
-              <?php echo htmlspecialchars( $error, ENT_COMPAT, 'UTF-8', FALSE ); ?>
+              {$error}
             </div>
-            <?php } ?>
+            {/if}
           </div>
         </div>
 
-        <form action="/ocorrencia-vitima-enviar-arquivo-cadastrar/<?php echo htmlspecialchars( $idVitima, ENT_COMPAT, 'UTF-8', FALSE ); ?>/<?php echo htmlspecialchars( $idOcorrencia, ENT_COMPAT, 'UTF-8', FALSE ); ?>" method="post" enctype="multipart/form-data">          
+        <form action="/ocorrencia-vitima-enviar-arquivo-cadastrar-atualizar/{$idVitima}/{$idOcorrencia}/{$idArquivo}" method="post" enctype="multipart/form-data">          
           <!--Inicio Selecione Pessoa-->
           <div class="row">
             <div class="col-md-12">
               <div class="form-group">
                 <label for="id-selecione-pessoa">Selecione a pessoa</label>
                 <select class="form-control select2" name="selecionePessoa" id="id-selecione-pessoa">
-                  <option checked>--- Selecione uma pessoa ---</option>
-                  <?php $counter1=-1;  if( isset($selecionaPessoa) && ( is_array($selecionaPessoa) || $selecionaPessoa instanceof Traversable ) && sizeof($selecionaPessoa) ) foreach( $selecionaPessoa as $key1 => $value1 ){ $counter1++; ?>
-                  <option value="<?php echo htmlspecialchars( $value1["id"], ENT_COMPAT, 'UTF-8', FALSE ); ?>"><?php echo htmlspecialchars( $value1["nome"], ENT_COMPAT, 'UTF-8', FALSE ); ?></option>
-                  <?php } ?>
+                  <option value="{$selecionaPessoa.id}">{$selecionaPessoa.nome}</option>
                 </select>
               </div>
             </div>
@@ -55,7 +52,6 @@
           <div class="row">
             <div class="col-md-12">
               <div class="form-group">
-                <input type="hidden" id="id-selecione-documento-hidden" value="">
                 <label for="id-selecione-documento">Selecione o documento</label>
                 <select class="form-control select2" name="selecioneDocumento" id="id-selecione-documento">
                   <option value="cpf">CPF</option>
@@ -92,7 +88,7 @@
           <div class="row">
             <div class="col-md-12">
               <input type="submit" class="btn btn-primary pull-right" value="Enviar">
-              <a href="/ocorrencia-vitima-enviar-arquivo-lista/<?php echo htmlspecialchars( $idVitima, ENT_COMPAT, 'UTF-8', FALSE ); ?>/<?php echo htmlspecialchars( $idOcorrencia, ENT_COMPAT, 'UTF-8', FALSE ); ?>" class="btn btn-primary pull-left">Voltar</a>
+              <a href="/ocorrencia-vitima-enviar-arquivo-lista/{$idVitima}/{$idOcorrencia}" class="btn btn-primary pull-left">Voltar</a>
             </div>            
           </div>
           <!--Fim Row-->
