--- a/App/Views/site/ocorrencia-vitima-enviar-arquivo-cadastrar.html
+++ b/App/Views/site/ocorrencia-vitima-enviar-arquivo-cadastrar.html
@@ -92,7 +92,7 @@
           <div class="row">
             <div class="col-md-12">
               <input type="submit" class="btn btn-primary pull-right" value="Enviar">
-              <a href="#" class="btn btn-primary pull-left">Voltar</a>
+              <a href="/ocorrencia-vitima-enviar-arquivo-lista/{$idVitima}/{$idOcorrencia}" class="btn btn-primary pull-left">Voltar</a>
             </div>            
           </div>
           <!--Fim Row-->
