--- a/App/Views/site/ocorrencia-vitima-enviar-arquivo-lista.html
+++ b/App/Views/site/ocorrencia-vitima-enviar-arquivo-lista.html
@@ -35,18 +35,23 @@
           <tr>
             <th>ID</th>
             <th>Nome</th>
+            <th>Arquivo</th>
             <th>Tipo</th>
             <th>Opções</th>
           </tr>
           {loop="$documento"}
+          {if="$value.status == 0"}
           <tr>
-            <td>{$value.id}</td>
+            <td>{$value.idArquivo}</td>
             <td>{$value.nome}</td>
+            <td>{$value.arquivo}</td>
             <td>{$value.tipo}</td>
             <td>
               <a href="{$value.url}" target="_blank" class="btn btn-primary"><i class="fa fa-eye"></i></a>
+              <a href="/ocorrencia-vitima-enviar-arquivo-cadastrar-atualizar/{$idVitima}/{$idOcorrencia}/{$value.idArquivo}/{$value.idPessoa}" class="btn btn-success"><i class="fa fa-refresh"></i></a>
             </td>
           </tr>
+          {/if}
           {/loop}
         </table>
         <!--Fim Tabela-->
