--- a/App/Views/site/ocorrencia-detalhe.html
+++ b/App/Views/site/ocorrencia-detalhe.html
@@ -61,7 +61,7 @@
             <a href="/ocorrencia-vitimas-lista/{$detalheOcorrencia.0.idOcorrencia}" class="btn btn-app"><i class="fa fa-user"></i>Vítimas</a>
 
             <!--Aparecer para todos os status-->
-            <a href="#" class="btn btn-app"><i class="fa fa-user"></i>Agressor</a>
+            <a href="/ocorrencia-agressor/{$detalheOcorrencia.0.idOcorrencia}" class="btn btn-app"><i class="fa fa-user"></i>Agressor</a>
 
             <!--Aparecer para todos os status-->
             <a href="#" class="btn btn-app"><i class="fa fa-list-alt"></i>Detalhes</a>
