--- a/App/Views/site/ocorrencia-agressor.html
+++ b/App/Views/site/ocorrencia-agressor.html
@@ -57,7 +57,7 @@
             {/if}
             <td>
               <a href="/ocorrencia-agressor-detalhe/{$idOcorrencia}/{$value.isInstituicao}/{$value.idOcorrenciaAgressor}" class="btn btn-default"><i class="fa fa-bars"></i></a>
-              <a href="/ocorrencia-responsavel-vitima-editar/" class="btn btn-primary"><i class="fa fa-edit"></i></a>
+              <a href="/ocorrencia-agressor-editar/{$idOcorrencia}/{$value.isInstituicao}/{$value.idOcorrenciaAgressor}" class="btn btn-primary"><i class="fa fa-edit"></i></a>
               <a onclick="confirmar()" class="btn btn-danger"><i class="fa fa-trash"></i></a>
             </td>
           </tr>
