--- a/App/Views/site/ocorrencia-agressor-enviar-arquivo.html
+++ b/App/Views/site/ocorrencia-agressor-enviar-arquivo.html
@@ -23,7 +23,7 @@
         <!--Row-->
         <div class="row">
           <div class="col-md-12">
-            <a href="/ocorrencia-agressor-enviar-arquivo-cadastrar/" class="btn btn-success">Novo Documento</a>
+            <a href="/ocorrencia-agressor-enviar-arquivo-cadastrar-atualizar/{$idOcorrencia}" class="btn btn-success">Novo Documento</a>
           </div>          
         </div>
         <!--Fim Row-->
@@ -39,18 +39,25 @@
             <th>Tipo</th>
             <th>Opções</th>
           </tr>
-          
+          {loop="$documento"}
+          {if="$value.status == 0"}
           <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>{$value.idArquivo}</td>
+            <td>{$value.nome}</td>
+            <td>{$value.arquivo}</td>
+            <td>{$value.tipo}</td>
             <td>
-              <a href="" target="_blank" class="btn btn-primary"><i class="fa fa-eye"></i></a>
-              <a href="" class="btn btn-success"><i class="fa fa-refresh"></i></a>
+              <a href="{$value.url}" target="_blank" class="btn btn-primary"><i class="fa fa-eye"></i></a>
+              {if="$value.idPessoa != 'null'"}
+              <a href="/ocorrencia-agressor-enviar-arquivo-cadastrar-atualizar/{$idOcorrencia}/{$value.idPessoa}/{$value.idArquivo}" class="btn btn-success"><i class="fa fa-refresh"></i></a>
+              {/if}
+              {if="$value.idInstituicao != 'null'"}
+              <a href="/ocorrencia-agressor-enviar-arquivo-cadastrar-atualizar/{$idOcorrencia}/{$value.idInstituicao}/{$value.idArquivo}" class="btn btn-success"><i class="fa fa-refresh"></i></a>
+              {/if}
             </td>
           </tr>
-
+          {/if}
+          {/loop}
         </table>
         <!--Fim Tabela-->
       </div>
