--- a/App/Views/site/ocorrencia-solicitacoes-enviadas.html
+++ b/App/Views/site/ocorrencia-solicitacoes-enviadas.html
@@ -28,9 +28,9 @@
             </div>
             <div class="box-body no-padding">
               <ul class="nav nav-pills nav-stacked">
-                <li class="active"><a href="/ocorrencia-solicitacao"><i class="fa fa-inbox"></i> Caixa de Entrada
+                <li><a href="/ocorrencia-solicitacao"><i class="fa fa-inbox"></i> Caixa de Entrada
                   <span class="label label-primary pull-right">12</span></a></li>
-                <li><a href="/ocorrencia-solicitacoes-enviadas"><i class="fa fa-envelope-o"></i> Enviados</a></li>
+                <li class="active"><a href="/ocorrencia-solicitacoes-enviadas"><i class="fa fa-envelope-o"></i> Enviados</a></li>
               </ul>
             </div>
             <!-- /.box-body -->
@@ -41,7 +41,7 @@
         <div class="col-md-9">
           <div class="box box-primary">
             <div class="box-header with-border">
-              <h3 class="box-title">Caixa de Entrada</h3>
+              <h3 class="box-title">Enviados</h3>
 
               <div class="box-tools pull-right">
                 <div class="has-feedback">
@@ -54,7 +54,6 @@
             <!-- /.box-header -->
             <div class="box-body no-padding">
               <div class="mailbox-controls">
-                <!-- /.btn-group -->
                 <a href="/ocorrencia-solicitacao" class="btn btn-default btn-sm"><i class="fa fa-refresh"></i></a>
                 <div class="pull-right">
                   1-50/200
@@ -70,15 +69,8 @@
                 <table class="table table-hover table-striped">
                   <tbody>
                   <tr>
-                    <td><a href="/ocorrencia-ler-solicitacao"><i class="fa fa-inbox"></i></a></td>
+                    <td><a href="/ocorrencia-ler-solicitacao"><i class="fa fa-envelope-o"></i></a></td>
                     <td class="mailbox-name"><a href="/ocorrencia-ler-solicitacao">Alexander Pierce</a></td>
-                    <td class="mailbox-subject"><b>AdminLTE 2.0 Issue</b> - Trying to find a solution to this problem...
-                    </td>
-                    <td class="mailbox-date">5 mins ago</td>
-                  </tr>
-                  <tr>
-                    <td><a href="/ocorrencia-ler-solicitacao"><i class="fa fa-inbox"></i></a></td>
-                    <td class="mailbox-name"><a href="/ocorrencia-ler-solicitacao">igor</a></td>
                     <td class="mailbox-subject"><b>AdminLTE 2.0 Issue</b> - Trying to find a solution to this problem...
                     </td>
                     <td class="mailbox-date">5 mins ago</td>
@@ -92,7 +84,6 @@
             <!-- /.box-body -->
             <div class="box-footer no-padding">
               <div class="mailbox-controls">
-                <!-- /.btn-group -->
                 <a href="/ocorrencia-solicitacao" class="btn btn-default btn-sm"><i class="fa fa-refresh"></i></a>
                 <div class="pull-right">
                   1-50/200
