Arrumando o gerenciamento de Usuario - Diferenciar instituicao de pessoa fisica - Cadastrar, Editar, Listar

--- a/App/Views/site/usuarios-detalhe-editar.html
+++ b/App/Views/site/usuarios-detalhe-editar.html
@@ -44,6 +44,18 @@
             </div>
             <!--Fim Nome do usuario-->
 
+            {if="$dadosUsuario.isPessoa == 0"}
+            <!--CPF-->
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="id-cnpj-instituicao">CNPJ *</label>
+                <input type="text" name="cnpjInstituicao" id="id-cnpj-instituicao" class="form-control" placeholder="___.___.___-__" onblur="digitoRg()" value="{$dadosUsuario.cnpj}" required>
+              </div>
+            </div>
+            <!--Fim CPF-->
+            {/if}
+
+            {if="$dadosUsuario.isPessoa == 1"}
             <!--Data de Nascimento da usuario-->
               <div class="col-md-3">
                 <div class="form-group">
@@ -102,9 +114,15 @@
                 </div>
               </div>
               <!--Fim RG digito verificador-->
+              {/if}
 
               <!--Telefone Fixo usuario-->
+              {if="$dadosUsuario.isPessoa == 1"}
               <div class="col-md-3">
+              {/if}
+              {if="$dadosUsuario.isPessoa == 0"}
+              <div class="col-md-6">
+              {/if}
                 <div class="form-group">
                   <label for="id-telfixo-usuario">Telefone Fixo</label>
                   <input type="text" name="telFixoUsuario" id="id-telfixo-usuario" class="form-control" placeholder="____-____" value="{$dadosUsuario.fixo}">
@@ -113,7 +131,12 @@
               <!--Telefone Fixo usuario-->
 
               <!--Celular usuario-->
+              {if="$dadosUsuario.isPessoa == 1"}
               <div class="col-md-3">
+              {/if}
+              {if="$dadosUsuario.isPessoa == 0"}
+              <div class="col-md-6">
+              {/if}
                 <div class="form-group">
                   <label for="id-celular-usuario">Celular</label>
                   <input type="text" name="celularUsuario" id="id-celular-usuario" class="form-control" placeholder="_____-____" value="{$dadosUsuario.celular}">
@@ -126,7 +149,12 @@
             <!--Inicio Row-->
             <div class="row">
               <!--Email do usuario-->
+              {if="$dadosUsuario.isPessoa == 1"}
               <div class="col-md-6">
+              {/if}
+              {if="$dadosUsuario.isPessoa == 0"}
+              <div class="col-md-12">
+              {/if}
                 <div class="form-group">
                   <label for="id-email-usuario">E-mail</label>
                   <input type="email" name="emailUsuario" id="id-email-usuario" class="form-control" placeholder="Digite o e-mail aqui" maxlength="100" value="{$dadosUsuario.email}">
@@ -134,6 +162,7 @@
               </div>
               <!--Fim Email do usuario-->
 
+              {if="$dadosUsuario.isPessoa == 1"}
               <!--setor do usuario-->
               <div class="col-md-3">
                 <div class="form-group">
@@ -155,6 +184,7 @@
                 </div>
               </div>
               <!--Fim funcao do usuario-->
+              {/if}
             </div>
             <!--Fim Row-->
 
