--- a/App/Views/site/ocorrencia-detalhe.html
+++ b/App/Views/site/ocorrencia-detalhe.html
@@ -70,7 +70,7 @@
             <a href="/ocorrencia-arquivos" class="btn btn-app"><i class="fa fa-folder"></i>Arquivos</a>
 
             <!--Aparecer se o status for aberta, reaberta-->
-            <a href="/ocorrencia-solicitacao" class="btn btn-app"><i class="fa fa-envelope"></i>Solicitação</a>
+            <a href="/ocorrencia-solicitacao/{$detalheOcorrencia.0.idOcorrencia}" class="btn btn-app"><i class="fa fa-envelope"></i>Solicitação</a>
             
             <!--Aparecer se o status for aberta, reaberta-->
             <a href="#" class="btn btn-app"><i class="fa fa-inbox"></i>Arquivar</a>
