--- a/App/Views/site/ocorrencia-solicitacao.html
+++ b/App/Views/site/ocorrencia-solicitacao.html
@@ -15,7 +15,7 @@
     <section class="content">
       <div class="row">
         <div class="col-md-3">
-          <a href="/ocorrencia-nova-solicitacao" class="btn btn-primary btn-block margin-bottom">Nova Solicitação</a>
+          <a href="/ocorrencia-nova-solicitacao/{$idOcorrencia}" class="btn btn-primary btn-block margin-bottom">Nova Solicitação</a>
 
           <div class="box box-solid">
             <div class="box-header with-border">
@@ -28,9 +28,9 @@
             </div>
             <div class="box-body no-padding">
               <ul class="nav nav-pills nav-stacked">
-                <li class="active"><a href="/ocorrencia-solicitacao"><i class="fa fa-inbox"></i> Caixa de Entrada
-                  <span class="label label-primary pull-right">12</span></a></li>
-                <li><a href="/ocorrencia-solicitacoes-enviadas"><i class="fa fa-envelope-o"></i> Enviados</a></li>
+                <li class="active"><a href="/ocorrencia-solicitacao/{$idOcorrencia}"><i class="fa fa-inbox"></i> Caixa de Entrada
+                  <span class="label label-primary pull-right">12</span></a>
+                </li>
               </ul>
             </div>
             <!-- /.box-body -->
@@ -42,33 +42,17 @@
           <div class="box box-primary">
             <div class="box-header with-border">
               <h3 class="box-title">Caixa de Entrada</h3>
-
-              <div class="box-tools pull-right">
-                <div class="has-feedback">
-                  <input type="text" class="form-control input-sm" placeholder="Pesquisar Solicitação">
-                  <span class="glyphicon glyphicon-search form-control-feedback"></span>
-                </div>
-              </div>
-              <!-- /.box-tools -->
             </div>
             <!-- /.box-header -->
             <div class="box-body no-padding">
               <div class="mailbox-controls">
                 <!-- /.btn-group -->
-                <a href="/ocorrencia-solicitacao" class="btn btn-default btn-sm"><i class="fa fa-refresh"></i></a>
-                <div class="pull-right">
-                  1-50/200
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-default btn-sm"><i class="fa fa-chevron-left"></i></button>
-                    <button type="button" class="btn btn-default btn-sm"><i class="fa fa-chevron-right"></i></button>
-                  </div>
-                  <!-- /.btn-group -->
-                </div>
-                <!-- /.pull-right -->
+                <a href="/ocorrencia-solicitacao/{$idOcorrencia}" class="btn btn-default btn-sm"><i class="fa fa-refresh"></i></a>
               </div>
               <div class="table-responsive mailbox-messages">
                 <table class="table table-hover table-striped">
                   <tbody>
+                  
                   <tr>
                     <td><a href="/ocorrencia-ler-solicitacao"><i class="fa fa-inbox"></i></a></td>
                     <td class="mailbox-name"><a href="/ocorrencia-ler-solicitacao">Alexander Pierce</a></td>
@@ -76,13 +60,7 @@
                     </td>
                     <td class="mailbox-date">5 mins ago</td>
                   </tr>
-                  <tr>
-                    <td><a href="/ocorrencia-ler-solicitacao"><i class="fa fa-inbox"></i></a></td>
-                    <td class="mailbox-name"><a href="/ocorrencia-ler-solicitacao">igor</a></td>
-                    <td class="mailbox-subject"><b>AdminLTE 2.0 Issue</b> - Trying to find a solution to this problem...
-                    </td>
-                    <td class="mailbox-date">5 mins ago</td>
-                  </tr>
+                  
                   </tbody>
                 </table>
                 <!-- /.table -->
@@ -93,16 +71,7 @@
             <div class="box-footer no-padding">
               <div class="mailbox-controls">
                 <!-- /.btn-group -->
-                <a href="/ocorrencia-solicitacao" class="btn btn-default btn-sm"><i class="fa fa-refresh"></i></a>
-                <div class="pull-right">
-                  1-50/200
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-default btn-sm"><i class="fa fa-chevron-left"></i></button>
-                    <button type="button" class="btn btn-default btn-sm"><i class="fa fa-chevron-right"></i></button>
-                  </div>
-                  <!-- /.btn-group -->
-                </div>
-                <!-- /.pull-right -->
+                <a href="/ocorrencia-solicitacao/{$idOcorrencia}" class="btn btn-default btn-sm"><i class="fa fa-refresh"></i></a>
               </div>
             </div>
           </div>
