--- a/App/Views/site/ocorrencia-ler-solicitacao.html
+++ b/App/Views/site/ocorrencia-ler-solicitacao.html
@@ -63,6 +63,8 @@
             {if="$value.isResposta == '1'"}
             <div class="box-footer">
               <h4>Resposta</h4>
+
+              <p>{$value.resposta}</p>
             </div>
             <!-- /.box-footer -->
             {/if}
