--- a/App/Views/site/solicitacoes-lixeira.html
+++ b/App/Views/site/solicitacoes-lixeira.html
@@ -49,14 +49,23 @@
               <div class="table-responsive mailbox-messages">
                 <table class="table table-hover table-striped">
                   <tbody>
+                  {loop="$mensagem"}
+                  {if="$value.isLixeira == '1'"}
                   <tr>
-                    <td><input type="checkbox"></td>
-                    <td><a href="/ler-solicitacao"><i class="fa fa-trash-o"></i></a></td>
-                    <td class="mailbox-name"><a href="/ler-solicitacao">Alexander Pierce</a></td>
-                    <td class="mailbox-subject"><b>AdminLTE 2.0 Issue</b> - Trying to find a solution to this problem...
+                    {if="$value.isInstituicao == '1'"}
+                    <td><a href="/ler-solicitacao/{$value.idSolicitacao}/1"><i class="fa fa-inbox"></i></a></td>
+                    <td class="mailbox-name"><a href="/ler-solicitacao/{$value.idSolicitacao}/1">{$value.nomeDestinatario}</a></td>
+                    {/if}
+                    {if="$value.isInstituicao == '0'"}
+                    <td><a href="/ler-solicitacao/{$value.idSolicitacao}/0"><i class="fa fa-inbox"></i></a></td>
+                    <td class="mailbox-name"><a href="/ler-solicitacao/{$value.idSolicitacao}/0">{$value.funcaoDestinatario} </a></td>
+                    {/if}
+                    <td class="mailbox-subject" style="overflow: hidden; max-width:500px; text-overflow: ellipsis; white-space:nowrap;"><b>{$value.assunto}</b> - {$value.mensagem} {$value.mensagem}
                     </td>
-                    <td class="mailbox-date">5 mins ago</td>
+                    <td class="mailbox-date">{$value.dataCriacao}</td>
                   </tr>
+                  {/if}
+                  {/loop}
                   </tbody>
                 </table>
                 <!-- /.table -->
