--- a/App/Views/site/solicitacoes.html
+++ b/App/Views/site/solicitacoes.html
@@ -50,19 +50,23 @@
                 <table class="table table-hover table-striped">
                   <tbody>
                   {loop="$mensagem"}
+                  {if="$value.isLixeira == '0'"}
                   <tr>
                     {if="$value.isInstituicao == '1'"}
                     <td><a href="/ler-solicitacao/{$value.idSolicitacao}/1"><i class="fa fa-inbox"></i></a></td>
+                    <td><a href="/solicitacao-lixeira/{$value.idSolicitacao}/1"><i class="fa fa-trash"></i></a></td>
                     <td class="mailbox-name"><a href="/ler-solicitacao/{$value.idSolicitacao}/1">{$value.nomeDestinatario}</a></td>
                     {/if}
                     {if="$value.isInstituicao == '0'"}
                     <td><a href="/ler-solicitacao/{$value.idSolicitacao}/0"><i class="fa fa-inbox"></i></a></td>
+                    <td><a href="/solicitacao-lixeira/{$value.idSolicitacao}/0"><i class="fa fa-trash"></i></a></td>
                     <td class="mailbox-name"><a href="/ler-solicitacao/{$value.idSolicitacao}/0">{$value.funcaoDestinatario} </a></td>
                     {/if}
                     <td class="mailbox-subject" style="overflow: hidden; max-width:500px; text-overflow: ellipsis; white-space:nowrap;"><b>{$value.assunto}</b> - {$value.mensagem} {$value.mensagem}
                     </td>
                     <td class="mailbox-date">{$value.dataCriacao}</td>
                   </tr>
+                  {/if}
                   {/loop}
                   </tbody>
                 </table>
